@@ -81,6 +81,7 @@ LIBRPM_0
     rpmcliRootDir;
     rpmcliShowMatches;
     rpmcliSign;
+    rpmcliTargets;
     rpmcliVerify;
     rpmDetectPGPVersion;
     rpmDisplayQueryTags;
